--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@auth0/auth0-react": "^2.2.4",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "gapi-script": "^1.2.0",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
